# eventhub-pyclient

./: .gitignore  LICENSE  Makefile  README.md  client_test.py  setup.cfg
eventhub_client/: client.py
src/eventhub_client/: __init__.py  client.py
tests/: test_eventhub.py
