[metadata]
name = eventhub_client
version = 0.0.1
author = Ole Fredrik Skudsvik
author_email = ole.skudsvik@gmail.com
description = Python client for Eventhub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olesku/eventhub-pyclient
project_urls =
    Bug Tracker = https://github.com/olesku/eventhub-pyclient/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
